--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,55 @@
 body {
-    background-color:#EBEBEB;
+  background-color: #1ae4da;
 }
 
 .heading {
-    background-color: black;
-    margin-bottom: 20px;
-    padding: 5px 0px 5px 15px;
+  background-color: #333333;
+  margin-bottom: 20px;
+  padding: 5px 0px 5px 15px;
 }
 
 .title {
-    background-color: black;
-    padding: 5px;
-    color: white;
+  background-color: #333333;
+  padding: 5px;
+  color: white;
 }
 
 #runtime {
-    background-color: #333333;
-    color: #3E8FDE;
-    padding: 0px 0px 5px 5px;
+  background-color: #333333;
+  color: #3e8fde;
+  padding: 0px 0px 5px 5px;
 }
 
 .content {
-    color: #3E8FDE;
+  color: #3e8fde;
 }
 
 #subtitle {
-    color: white;
-    margin-left: 55px;
+  color: white;
+  margin-left: 55px;
 }
 
 #showing {
-    margin-left: 20px;
+  margin-left: 20px;
+}
+
+#films li::before {
+  content: "";
 }
 
 .film {
-    font-size: 20px;
-    display:flex;
-    justify-content: center;
-    border:double;
-    margin:0.5%;
-    background-color: orange;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 
 .sold-out {
-    color: rgb(189, 42, 86);
+  color: lightgray;
 }
 
 img {
-    max-width: 25vw;
+  max-width: 25vw;
 }
 
 #film-info {
-    padding-bottom: 30px;
-    background-color: aqua;
-    color:black
+  padding-bottom: 15px;
 }
